# Folix

./: .gitignore  README.md  pyproject.toml
Folix/: manage.py
Folix/account/: models.py
Folix/account/migrations/: 0001_initial.py
Folix/core/: admin.py  views.py
Folix/core/static/core/js/: script.js
Folix/core/static/core/styles/: styles.css
Folix/core/templates/core/: cuenta.html  login.html  register.html
Folix/folix/: asgi.py  settings.py  urls.py  wsgi.py
